--- a/app/src/main/res/layout/activity_subscriptions.xml
+++ b/app/src/main/res/layout/activity_subscriptions.xml
@@ -16,10 +16,7 @@
             android:fitsSystemWindows="true"
             app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap">
 
-            <include
-                layout="@layout/part_top_panel"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.5" />
+            <include layout="@layout/part_top_panel" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
