--- a/app/src/main/res/layout/part_bottom_panel.xml
+++ b/app/src/main/res/layout/part_bottom_panel.xml
@@ -4,5 +4,6 @@
     android:id="@+id/bottomPanel"
     style="@style/bottomNavigation"
     android:layout_gravity="bottom"
+    android:scrollbars="none"
     app:layout_constraintBottom_toBottomOf="parent"
     app:menu="@menu/bottom_navigation_menu" />
