--- a/app/src/main/res/layout/activity_creation_service.xml
+++ b/app/src/main/res/layout/activity_creation_service.xml
@@ -46,8 +46,8 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/costCreationServiceInput"
-                        android:inputType="number"
-                        style="@style/materialInput" />
+                        style="@style/materialInput"
+                        android:inputType="number" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -59,17 +59,10 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/addressCreationServiceInput"
-                        android:inputType="textCapSentences"
-                        style="@style/materialInput" />
+                        style="@style/materialInput"
+                        android:inputType="textCapSentences" />
 
                 </com.google.android.material.textfield.TextInputLayout>
-
-
-                <LinearLayout
-                    android:id="@+id/categoryCreationServiceLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/materialInputLayout"
@@ -78,38 +71,40 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/descriptionCreationServiceInput"
+                        style="@style/materialInput"
                         android:inputType="textMultiLine|textCapSentences"
-                        android:maxLines="10"
-                        style="@style/materialInput" />
+                        android:maxLines="10" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <HorizontalScrollView
+                <LinearLayout
+                    android:id="@+id/categoryCreationServiceLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:scrollbars="none">
+                    android:orientation="horizontal" />
 
-                    <LinearLayout
-                        android:id="@+id/photoCreationServiceLayout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/photoCreationServiceBtn"
-                            android:layout_width="80dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="15dp"
-                            android:background="@drawable/plus_photo_bg"
-                            android:gravity="center"
-                            android:text="+"
-                            android:textColor="@color/white"
-                            android:textSize="60sp" />
-                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/photoCreationServiceBtn"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/plus_photo_bg"
+                        android:gravity="center"
+                        android:text="+"
+                        android:textColor="@color/white"
+                        android:textSize="60sp" />
 
-                </HorizontalScrollView>
-
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/resultsCreationServiceRecycleView"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:scrollbars="none" />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
