update photo feed and icons

--- a/app/src/main/res/layout/activity_creation_service.xml
+++ b/app/src/main/res/layout/activity_creation_service.xml
@@ -42,7 +42,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/materialInputLayout"
                     android:hint="Цена"
-                    app:startIconDrawable="@drawable/icon_profile">
+                    app:startIconDrawable="@drawable/icon_dollar_sign_solid">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/costCreationServiceInput"
@@ -51,11 +51,10 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/materialInputLayout"
                     android:hint="Адрес"
-                    app:startIconDrawable="@drawable/icon_profile">
+                    app:startIconDrawable="@drawable/icon_map_marked_solid">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/addressCreationServiceInput"
@@ -67,7 +66,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/materialInputLayout"
                     android:hint="Описание"
-                    app:startIconDrawable="@drawable/icon_profile">
+                    app:startIconDrawable="@drawable/icon_file_alt_regular">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/descriptionCreationServiceInput"
