--- a/app/src/main/res/layout/activity_creation_service.xml
+++ b/app/src/main/res/layout/activity_creation_service.xml
@@ -122,7 +122,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/addServiceCreationServiceBtn"
-                style="@style/smallButton"
+                style="@style/mainButton"
                 android:layout_gravity="center_horizontal"
                 android:text="@string/addServices" />
         </LinearLayout>
