--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -177,6 +177,14 @@
         <item name="elevation">5dp</item>
     </style>
 
+    <!-- main button on screen -->
+    <style name="mainButton" parent="baseButton">
+        <item name="android:width">300dp</item>
+        <item name="cornerRadius">18dp</item>
+        <item name="android:backgroundTint">@color/darkBlue</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <!-- BLOCKS -->
 
     <style name="verticalBlock">
@@ -435,12 +443,6 @@
     <style name="loginSpinner">
         <item name="android:layout_width">220dp</item>
         <item name="android:layout_height">wrap_content</item>
-    </style>
-
-    <style name="mainButton" parent="baseButton">
-        <item name="android:background">@drawable/main_button</item>
-        <item name="android:layout_marginBottom">5dp</item>
-        <item name="android:layout_marginTop">5dp</item>
     </style>
 
     <style name="lightBlueButton" parent="baseButton">
