--- a/app/src/main/res/layout/activity_creation_service.xml
+++ b/app/src/main/res/layout/activity_creation_service.xml
@@ -82,21 +82,19 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal" />
 
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/photoCreationServiceBtn"
+                    style="@style/smallButton"
+                    android:textSize="20sp"
+                    android:fontFamily="@font/font_awesome_solid"
+                    android:layout_gravity="center_horizontal"
+                    android:text="" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/photoCreationServiceBtn"
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/plus_photo_bg"
-                        android:gravity="center"
-                        android:text="+"
-                        android:textColor="@color/white"
-                        android:textSize="60sp" />
-
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/resultsCreationServiceRecycleView"
                         android:layout_width="0dp"
@@ -114,11 +112,6 @@
                 android:gravity="center"
                 android:orientation="vertical" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/continueCreationServiceBtn"
-                style="@style/mainButton"
-                android:layout_gravity="center"
-                android:text="Продолжить" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/addServiceCreationServiceBtn"
@@ -128,6 +121,14 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/continueCreationServiceBtn"
+        style="@style/mainButton"
+        android:text="Продолжить"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <include layout="@layout/part_bottom_panel" />
 
