--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -2,32 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <LinearLayout
-        style="@style/block"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        android:background="@drawable/block_text"
-        android:orientation="horizontal">
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/materialSpinnerLayout"
+        app:startIconDrawable="@drawable/icon_file_alt_regular">
 
-        <Spinner
+        <AutoCompleteTextView
             android:id="@+id/categorySpinner"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:background="@color/mainBlue"
-            android:backgroundTint="@color/mainBlue"
-            android:entries="@array/choice_categories"
-            android:popupBackground="@color/mainBlue" />
+            style="@style/materialSpinner" />
 
-    </LinearLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
 
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="@dimen/default_margin"
+        android:paddingBottom="@dimen/default_margin"
         android:scrollbars="none">
 
         <LinearLayout
